[23] JEP 476: Module Import Declarations (Preview)
Implement: scanner should accept 'import module m' in module-info.java